--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,44 @@
 body {
   font-family: "Silkscreen", monospace;
 }
-
+div {
+  max-width: 460px;
+  border-top: 3px solid #000;
+border-left: 3px solid #000;
+padding-left: 28px;
+}
+h1{
+width: 210px;
+height: 77px;
+flex-shrink: 0;
+color: #000;
+font-size: 60px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+p{
+  width: 402px;
+height: 60px;
+font-size: 16px;
+width: 402px;
+color: #000;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
 img {
   display: block;
+  width: 460px;
+  height: 215px;
+}
+a{
+  color: black;
+  font-size: 45px ;
+  font-size: 30px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+text-decoration-line: underline;
 }
